--- a/Earthquake_Challenge/index.html
+++ b/Earthquake_Challenge/index.html
@@ -29,7 +29,7 @@ crossorigin=""></script>
 
 <!-- Our JavaScript -->
 <script type="text/javascript" src="static/js/cities.js"></script>
-<script type="text/javascript" src="static/js/logic.js"></script>
+<script type="text/javascript" src="static/js/challenge_logic.js"></script>
 
 </body>
 </html>
